# patrol_robot_ws

./: .gitignore  README.md
src/patrol_gazebo/: package.xml  setup.cfg  setup.py
src/patrol_gazebo/launch/: patrol_sim.launch.py
src/patrol_gazebo/worlds/: patrol_world.sdf
src/patrol_logger/: package.xml  setup.cfg  setup.py
src/patrol_logger/patrol_logger/: alert_manager.py  event_logger.py
src/patrol_manager/: package.xml  setup.py
src/patrol_manager/config/: waypoints.yaml
src/patrol_manager/patrol_manager/: simple_patrol_manager.py
src/patrol_msgs/: CMakeLists.txt  package.xml
src/patrol_msgs/msg/: CheckRequest.msg  HazardEvent.msg
src/patrol_nav2/: package.xml  setup.cfg  setup.py
src/patrol_navigation/: package.xml  setup.py
src/patrol_navigation/config/: nav2_params.yaml
src/patrol_navigation/launch/: patrol_navigation.launch.py
src/patrol_navigation/maps/: patrol_map_large.pgm  patrol_map_large.yaml
src/patrol_navigation/patrol_navigation/: nav2_patrol_manager.py
src/patrol_perception/: package.xml  setup.cfg  setup.py
src/patrol_perception/patrol_perception/: camera_hazard_detector.py  camera_subscriber.py  dummy_hazard_detector.py  yolo_hazard_detector.py
src/patrol_robot_description/: package.xml  setup.py
src/patrol_robot_description/urdf/: patrol_robot.urdf
src/patrol_slam/: package.xml  setup.cfg  setup.py
src/patrol_slam/config/: slam_params.yaml
src/patrol_slam/launch/: patrol_slam.launch.py
src/patrol_visualization/: package.xml  setup.cfg  setup.py
src/patrol_visualization/patrol_visualization/: hazard_marker_node.py  hazard_marker_publisher.py
