<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>patrol_visualization</name>
  <version>0.0.0</version>
  <description>RViz marker visualization package for patrol robot events</description>
  <maintainer email="se010s@ewha.ac.kr">user04</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>patrol_msgs</exec_depend>
  <exec_depend>patrol_manager</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
